--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Homepage
-subtitle: ""
-description: ""
+subtitle: This is dcdeng.
+description: 好记性不如烂笔头
 keywords:
 author: dcdeng
 language: zh-CN
@@ -32,7 +32,7 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+new_post_name: :year:month-:title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link:
