--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -51,7 +51,7 @@ language_switcher: false
 
 footer:
   # Specify the date when the site was setup. If not defined, current year will be used.
-  since: 2023-07
+  since: 2023
 
   # Icon between year and copyright info.
   icon:
