--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -86,8 +86,8 @@ footer:
 # CC licenses are available in 39 languages, you can find the specific and correct abbreviation you need on https://creativecommons.org
 creative_commons:
   license: by-nc-sa
-  sidebar: false
-  post: true
+  sidebar: true
+  post: false
   language:
 
 # ---------------------------------------------------------------
