--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ subtitle: This is dcdeng.
 description: 好记性不如烂笔头
 keywords:
 author: dcdeng
-language: zh-CN
+language:
+  - zh-CN
 timezone: Asia/Shanghai
 
 # URL
@@ -18,8 +19,8 @@ url: https://dc-deng.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
-    trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-    trailing_html: true # Set to false to remove trailing '.html' from permalinks
+  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
@@ -36,35 +37,35 @@ new_post_name: :year:month-:title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link:
-    enable: true # Open external links in new tab
-    field: site # Apply to the whole site
-    exclude: ""
+  enable: true # Open external links in new tab
+  field: site # Apply to the whole site
+  exclude: ""
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-    enable: true
-    line_number: true
-    auto_detect: false
-    tab_replace: ""
-    wrap: true
-    hljs: false
+  enable: true
+  line_number: true
+  auto_detect: false
+  tab_replace: ""
+  wrap: true
+  hljs: false
 prismjs:
-    enable: false
-    preprocess: true
-    line_number: true
-    tab_replace: ""
+  enable: false
+  preprocess: true
+  line_number: true
+  tab_replace: ""
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-    path: ""
-    per_page: 10
-    order_by: -date
+  path: ""
+  per_page: 10
+  order_by: -date
 
 # Category & Tag
 default_category: uncategorized
@@ -103,19 +104,19 @@ theme: next
 # hexo-word-counter
 ## https://github.com/next-theme/hexo-word-counter
 symbols_count_time:
-    symbols: true
-    time: true
-    total_symbols: false
-    total_time: false
-    exclude_codeblock: true
-    awl: 2
-    wpm: 300
-    suffix: "mins."
+  symbols: true
+  time: true
+  total_symbols: false
+  total_time: false
+  exclude_codeblock: true
+  awl: 2
+  wpm: 300
+  suffix: "mins."
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 
 deploy:
-    type: git
-    repository: git@github.com:dc-deng/dc-deng.github.io.git #你的仓库地址
-    branch: main
+  type: git
+  repository: git@github.com:dc-deng/dc-deng.github.io.git #你的仓库地址
+  branch: main
