--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Homepage
-subtitle: 好记性不如烂笔头。
-description: “人要为自己的生命提供一种意义，这意义超过生命本身的意义；人的自我创造需要一个目标，这个目标高于人自身：这就是人的自我超越性。”
+subtitle:
+description: 生命的意义在于超越生命本身之意义。
 keywords:
 author: dcdeng
 language:
