--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Homepage
 subtitle:
-description: 生命的意义在于超越生命本身之意义。
+description: 生命的意义在于超越生命本身之意义
 keywords:
 author: dcdeng
 language:
