--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Homepage
-subtitle:
-description: 生命的意义在于超越生命本身之意义
+subtitle: 好记性不如烂笔头
+description: 不肝不卷，从心所欲
 keywords:
 author: dcdeng
 language:
