--- a/_config.next.yml
+++ b/_config.next.yml
@@ -101,7 +101,7 @@ scheme: Mist
 #scheme: Gemini
 
 # Dark Mode
-darkmode: false
+darkmode: true
 
 # ---------------------------------------------------------------
 # Menu Settings
