--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Homepage
-subtitle: 好记性不如烂笔头
-description: 不肝不卷，从心所欲
+subtitle:
+description: 闭嘴，做。
 keywords:
 author: dcdeng
 language:
