--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,8 @@
 
 # Site
 title: Homepage
-<<<<<<< HEAD
 subtitle: 好记性不如烂笔头
-description: 遵循本心去探索
-=======
-subtitle:
-description: 闭嘴，做
->>>>>>> 643ab88d749aefe989a7c3f7ea6dff87e0447a0f
+description: 我是傻逼
 keywords:
 author: dcdeng
 language:
