--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Homepage
 subtitle: 好记性不如烂笔头
-description: 知识本身和获取知识的途径无关
+description: 知识最终只会被带入土里，发现的问题和解决的方案才会留下来
 keywords:
 author: dcdeng
 language:
