--- a/_config.next.yml
+++ b/_config.next.yml
@@ -400,7 +400,7 @@ github_banner:
 # ---------------------------------------------------------------
 
 font:
-  enable: false
+  enable: true
 
   # Uri of fonts host, e.g. https://fonts.googleapis.com (Default).
   host:
@@ -412,9 +412,9 @@ font:
 
   # Global font settings used for all elements inside <body>.
   global:
-    external: true
-    family: Lato
-    size:
+    external: false
+    family: SourceHanSerifCN-Regular-1
+    size: 1.125
 
   # Font settings for site title (.site-title).
   title:
