--- a/_config.next.yml
+++ b/_config.next.yml
@@ -413,25 +413,26 @@ font:
   # Global font settings used for all elements inside <body>.
   global:
     external: false
-    family: SourceHanSerifCN-Regular-1
-    size: 1.125
+    family:
+    size: 1
 
   # Font settings for site title (.site-title).
   title:
-    external: true
-    family:
-    size:
+    external: false
+    family: Source Han Sans CN VF
+    size: 1
 
   # Font settings for headlines (<h1> to <h6>).
   headings:
-    external: true
-    family:
+    external: false
+    family: Source Han Sans CN VF
     size:
 
   # Font settings for posts (.post-body).
   posts:
-    external: true
-    family:
+    external: false
+    family: Source Han Serif CN
+    size: 1
 
   # Font settings for <code> and code blocks.
   codes:
