--- a/_config.next.yml
+++ b/_config.next.yml
@@ -383,7 +383,7 @@ bookmark:
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
   enable: false
-  permalink: https://github.com/yourname
+  permalink: https://github.com/dc-deng
   title: Follow me on GitHub
 
 # ---------------------------------------------------------------
@@ -413,25 +413,28 @@ font:
   # Global font settings used for all elements inside <body>.
   global:
     external: false
-    family:
+    family: Source Han Sans CN VF
     size: 1
 
   # Font settings for site title (.site-title).
   title:
     external: false
-    family: Source Han Sans CN VF
+    # family: Source Han Sans CN VF
+    # family: Source Han Sans CN VF
     size: 1
 
   # Font settings for headlines (<h1> to <h6>).
   headings:
     external: false
-    family: Source Han Sans CN VF
+    # family: Source Han Sans CN VF
+    # family: Source Han Sans CN VF
     size:
 
   # Font settings for posts (.post-body).
   posts:
     external: false
-    family: Source Han Serif CN
+    # family: Source Han Serif CN
+    # family: Source Han Serif CN
     size: 1
 
   # Font settings for <code> and code blocks.
