--- a/_config.next.yml
+++ b/_config.next.yml
@@ -413,6 +413,7 @@ font:
   # Global font settings used for all elements inside <body>.
   global:
     external: false
+    # family: Source Han Serif CN
     # family: Source Han Sans CN VF
     family: LXGW WenKai
     size: 1
